{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 18,
  "lineage": "63ad1659-bfc9-4fcc-8d98-7cf2ff6d7537",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "customVpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272ad85ddcd5d20d",
            "domain": "vpc",
            "id": "eipalloc-0272ad85ddcd5d20d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-62-240.compute-1.amazonaws.com",
            "public_ip": "34.192.62.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:698873348219:instance/i-0354c40a3889fb77b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0354c40a3889fb77b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a960e8eb982b7fc",
            "private_dns": "ip-10-0-3-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f1f45e5b575ca24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0184b782b52791256",
            "tags": {
              "Name": "priv-instance"
            },
            "tags_all": {
              "Name": "priv-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04bd1bd47ad6569cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-customvpc-ssh",
            "aws_subnet.customVpcOne-private-1",
            "aws_vpc.customVpcOne",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0778521d914d23bc1",
            "arn": "arn:aws:ec2:us-east-1:698873348219:instance/i-054dec3fa23c88fc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054dec3fa23c88fc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f1dbf4a3b345a38",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-44-192-55-138.compute-1.amazonaws.com",
            "public_ip": "44.192.55.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6d599f78fcecd1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd0256de28fbc046",
            "tags": {
              "Name": "pub-instance"
            },
            "tags_all": {
              "Name": "pub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04bd1bd47ad6569cb",
              "sg-08f7552127ff263c2"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-customvpc-http",
            "aws_security_group.allow-customvpc-ssh",
            "aws_subnet.customVpcOne-public-1",
            "aws_vpc.customVpcOne",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customVpcOne-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:internet-gateway/igw-0160bacb54709a536",
            "id": "igw-0160bacb54709a536",
            "owner_id": "698873348219",
            "tags": {
              "Name": "customVpcOne-ig"
            },
            "tags_all": {
              "Name": "customVpcOne-ig"
            },
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "dependencies": [
            "aws_vpc.customVpcOne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customVpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0272ad85ddcd5d20d",
            "connectivity_type": "public",
            "id": "nat-027c00edc35b9f015",
            "network_interface_id": "eni-068c5218a62757922",
            "private_ip": "10.0.1.234",
            "public_ip": "34.192.62.240",
            "subnet_id": "subnet-0dd0256de28fbc046",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.customVpc-nat",
            "aws_internet_gateway.customVpcOne-gw",
            "aws_subnet.customVpcOne-public-1",
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customVpcOne-private-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:route-table/rtb-0843956b14180ae8a",
            "id": "rtb-0843956b14180ae8a",
            "owner_id": "698873348219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-027c00edc35b9f015",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customVpcOne-private-r"
            },
            "tags_all": {
              "Name": "customVpcOne-private-r"
            },
            "timeouts": null,
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.customVpc-nat",
            "aws_internet_gateway.customVpcOne-gw",
            "aws_nat_gateway.customVpc-nat-gw",
            "aws_subnet.customVpcOne-public-1",
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customVpcOne-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:route-table/rtb-0b46c118208f71707",
            "id": "rtb-0b46c118208f71707",
            "owner_id": "698873348219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0160bacb54709a536",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customVpcOne-r"
            },
            "tags_all": {
              "Name": "customVpcOne-r"
            },
            "timeouts": null,
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.customVpcOne-gw",
            "aws_vpc.customVpcOne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customVpcOne-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb25e0c9bf1ade06",
            "route_table_id": "rtb-0843956b14180ae8a",
            "subnet_id": "subnet-0184b782b52791256"
          },
          "dependencies": [
            "aws_eip.customVpc-nat",
            "aws_internet_gateway.customVpcOne-gw",
            "aws_nat_gateway.customVpc-nat-gw",
            "aws_route_table.customVpcOne-private-r",
            "aws_subnet.customVpcOne-private-1",
            "aws_subnet.customVpcOne-public-1",
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customVpcOne-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd89bd3d8efd6e7f",
            "route_table_id": "rtb-0b46c118208f71707",
            "subnet_id": "subnet-0dd0256de28fbc046"
          },
          "dependencies": [
            "aws_internet_gateway.customVpcOne-gw",
            "aws_route_table.customVpcOne-r",
            "aws_subnet.customVpcOne-public-1",
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customVpcOne-public-1-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00406fdc9864d41e8",
            "route_table_id": "rtb-0b46c118208f71707",
            "subnet_id": "subnet-0f6021fe6a2813fcb"
          },
          "dependencies": [
            "aws_internet_gateway.customVpcOne-gw",
            "aws_route_table.customVpcOne-r",
            "aws_subnet.customVpcOne-public-2",
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-customvpc-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:security-group/sg-08f7552127ff263c2",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f7552127ff263c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "698873348219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customVpcOne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-customvpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:security-group/sg-04bd1bd47ad6569cb",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bd1bd47ad6569cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "698873348219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customVpcOne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customVpcOne-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:subnet/subnet-0184b782b52791256",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0184b782b52791256",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698873348219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customVpcOne-private-1"
            },
            "tags_all": {
              "Name": "customVpcOne-private-1"
            },
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "dependencies": [
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customVpcOne-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:subnet/subnet-0dd0256de28fbc046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0256de28fbc046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698873348219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customVpcOne-public-1"
            },
            "tags_all": {
              "Name": "customVpcOne-public-1"
            },
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "dependencies": [
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customVpcOne-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:subnet/subnet-0f6021fe6a2813fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6021fe6a2813fcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698873348219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "customVpcOne-public-2"
            },
            "tags_all": {
              "Name": "customVpcOne-public-2"
            },
            "vpc_id": "vpc-0262cf75ffdafaac7"
          },
          "dependencies": [
            "aws_vpc.customVpcOne",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customVpcOne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698873348219:vpc/vpc-0262cf75ffdafaac7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a87ecd3219eb4741",
            "default_route_table_id": "rtb-0cb022033d1dbc132",
            "default_security_group_id": "sg-0e16a4c6581aaf818",
            "dhcp_options_id": "dopt-074711b1fe947120f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0262cf75ffdafaac7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb022033d1dbc132",
            "owner_id": "698873348219",
            "tags": {
              "Name": "customVpcOne"
            },
            "tags_all": {
              "Name": "customVpcOne"
            }
          }
        }
      ]
    }
  ]
}